# hermetic

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Justfile  README.md  clippy.toml  deny.toml  rust-toolchain.toml  spec.md
.github/workflows/: docker.yml
artifacts/: manifest
docs/wayfinding/deno-embedding/: deno_embed.rs  deno_embed_bootstrap.js  deno_runtime_smoke.rs
examples/: spike.rs
railgun-runtime/: build-embedded.mjs  package-lock.json  package.json  runtime.mjs  sdk-internals.mjs
railgun-runtime/src/: artifacts.mjs  host-ops.mjs  network.mjs  permissions.mjs  runtime.mjs  snark.mjs  storage.mjs
sidecar/: Dockerfile  build-embedded.mjs  main.mjs  package-lock.json  package.json  runtime.mjs
src/: arti.rs  cli.rs  commands.rs  embedded.rs  error.rs  flow.rs  hermetic_host_ops.js  lib.rs  main.rs  railgun.rs  rpc.rs  sidecar.rs  signer.rs  transport.rs
src/cli/: args.rs  mod.rs  run.rs
src/cli/actions/: balance.rs  doctor.rs  mod.rs  ping.rs  shield.rs  signer_address.rs  unshield.rs  wallet.rs
src/embedded/: bootstrap.js  mod.rs  node_compat.rs  ops.rs  worker.rs
src/eth/: mod.rs  network.rs  rpc.rs  signer.rs  tx.rs
src/railgun/: artifacts.rs  manifest.rs  mod.rs  reverse.rs  types.rs
src/tor/: connector.rs  json_rpc.rs  mod.rs  services.rs
tests/: sidecar_permissions_smoke.rs  spike_connector_counter.rs
wayfinding/deno-embedding/: deno_embed.rs  deno_embed_bootstrap.js  deno_runtime_railgun_embed.rs  deno_runtime_smoke.rs
wayfinding/tor-transport-spike/: spike.rs
