[package]
name = "undercover"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[dependencies]
alloy-json-rpc = { version = "2.0.4", default-features = false }
alloy-network = { version = "2.0.4", default-features = false }
alloy-provider = { version = "2.0.4", default-features = false }
alloy-primitives = { version = "1.5.7", default-features = false, features = ["std"] }
alloy-rpc-client = { version = "2.0.4", default-features = false }
alloy-rpc-types-eth = { version = "2.0.4", default-features = false }
alloy-signer-local = { version = "2.0.4", default-features = false }
alloy-transport = { version = "2.0.4", default-features = false }
anyhow = "1"
arti-client = { version = "0.41", default-features = false, features = ["tokio", "rustls"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4.6", features = ["derive", "env"] }
deno_core = { version = "0.400", optional = true }
deno_error = { version = "0.7", optional = true }
deno_runtime = { version = "0.255", features = ["hmr"], optional = true }
http = "1"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
# deno_runtime 0.255 pulls ed448-goldilocks 0.14.0-pre.12, which expects
# elliptic-curve's 0.14.0-rc.31 pkcs8 shape.
elliptic-curve = { version = "=0.14.0-rc.31", optional = true }
deno_semver = { version = "0.9.1", optional = true }
node_resolver = { version = "0.85.0", features = ["sync"], optional = true }
pkcs8 = { version = "=0.11.0-rc.11", optional = true }
sys_traits = { version = "=0.1.27", optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.52", features = ["full"] }
tokio-rustls = "0.26"
tor-rtcompat = { version = "0.41", default-features = false, features = ["tokio", "rustls"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
webpki-roots = "0.26"
zeroize = "1"

[features]
deno-embed = ["dep:deno_core", "dep:deno_error"]
deno-runtime = ["dep:deno_error", "dep:deno_runtime", "dep:deno_semver", "dep:elliptic-curve", "dep:node_resolver", "dep:pkcs8", "dep:sys_traits"]

[dev-dependencies]
tempfile = "3"

[[example]]
name = "deno_embed"
required-features = ["deno-embed"]

[[example]]
name = "deno_runtime_smoke"
required-features = ["deno-runtime"]

[[example]]
name = "deno_runtime_railgun_embed"
required-features = ["deno-runtime"]
