[package]
name = "hermetic"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[dependencies]
alloy-json-rpc = { version = "2.0.4", default-features = false }
alloy-network = { version = "2.0.4", default-features = false }
alloy-provider = { version = "2.0.4", default-features = false }
alloy-primitives = { version = "1.5.7", default-features = false, features = ["std"] }
alloy-rpc-client = { version = "2.0.4", default-features = false }
alloy-rpc-types-eth = { version = "2.0.4", default-features = false }
alloy-signer-ledger = { version = "2.0.4", features = ["node"] }
alloy-signer-local = { version = "2.0.4", default-features = false }
alloy-transport = { version = "2.0.4", default-features = false }
anyhow = "1"
arti-client = { version = "0.41", default-features = false, features = ["tokio", "rustls"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4.6", features = ["derive", "env"] }
deno_error = "0.7"
deno_core = "0.400"
deno_runtime = { version = "0.255", features = ["hmr"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
# deno_runtime 0.255 pulls ed448-goldilocks 0.14.0-pre.12, which expects
# elliptic-curve's 0.14.0-rc.31 pkcs8 shape.
elliptic-curve = "=0.14.0-rc.31"
deno_semver = "0.9.1"
node_resolver = { version = "0.85.0", features = ["sync"] }
pkcs8 = "=0.11.0-rc.11"
sys_traits = "=0.1.27"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52", features = ["full"] }
tokio-rustls = "0.26"
tor-rtcompat = { version = "0.41", default-features = false, features = ["tokio", "rustls"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webpki-roots = "0.26"

[dev-dependencies]
tempfile = "3"
